First Brython experiments

--- a/shrew/templates/base.html
+++ b/shrew/templates/base.html
@@ -11,6 +11,8 @@
       <link rel="stylesheet" type="text/x-scss" href="{% static 'sass/main.scss' %}">
     {% endcompress %}
     <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700&amp;subset=latin-ext" rel="stylesheet">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
   </head>
   <body>
   <nav class="navbar">
@@ -27,5 +29,10 @@
       {% block content %}{%  endblock %}
     </div>
   </section>
+
+  {% compress js %}
+    <script src="{% static 'vendor/brython/brython.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
+  {% endcompress %}
   </body>
 </html>
