Implement the secure sandbox

--- a/shrew/templates/404.html
+++ b/shrew/templates/404.html
@@ -8,7 +8,7 @@
         <img src="{% static 'images/mascot.svg' %}" alt="">
 
         <h1 class="title">
-          Can't find such page!
+          Couldn't find that page!
         </h1>
         <h2 class="subtitle">
           Error 404. Sorry.
