--- a/shrew/templates/home.html
+++ b/shrew/templates/home.html
@@ -12,4 +12,5 @@
       <span>Run code</span>
     </button>
   </div>
+  <iframe width="0" height="0" id="interpreter-sandbox" src="{% url 'interpreter-sandbox' %}" sandbox="allow-scripts"></iframe>
 {% endblock %}
