--- a/shrew/templates/todo.html
+++ b/shrew/templates/todo.html
@@ -8,7 +8,7 @@
         <img src="{% static 'images/mascot.svg' %}" alt="">
 
         <h1 class="title">
-          The Shrew hasn't done this part yet!
+          The shrew hasn't done this part yet!
         </h1>
         <h2 class="subtitle">
           Sorry about that.
