Replace Brython with Skulpt

--- a/shrew/templates/creations/interpreter-sandbox.html
+++ b/shrew/templates/creations/interpreter-sandbox.html
@@ -7,8 +7,7 @@
     <meta charset="utf-8">
     <title>Code Shrew Interpreter</title>
     {% compress js %}
-      <script src="{% static 'vendor/brython/brython.js' %}"></script>
-      <script src="{% static 'js/interpreter-sandbox.js' %}"></script>
+      <script type="module" src="{% static 'js/interpreter-sandbox.js' %}"></script>
     {% endcompress %}
   </head>
 </html>
