--- a/shrew/templates/creations/interpreter-sandbox.html
+++ b/shrew/templates/creations/interpreter-sandbox.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8">
     <title>Code Shrew Interpreter</title>
     {% compress js %}
+      <script type="skulpt-module" src="{% static 'python/shrew.py' %}"></script>
       <script type="module" src="{% static 'js/interpreter-sandbox.js' %}"></script>
     {% endcompress %}
   </head>
