--- a/shrew/templates/home.html
+++ b/shrew/templates/home.html
@@ -12,5 +12,6 @@
       <span>Run code</span>
     </button>
   </div>
-  <iframe width="0" height="0" id="interpreter-sandbox" src="{% url 'interpreter-sandbox' %}" sandbox="allow-scripts"></iframe>
+  <iframe width="0" height="0" id="interpreter-sandbox" src="{% url 'creations:interpreter-sandbox' %}"
+          sandbox="allow-scripts"></iframe>
 {% endblock %}
