Refactor the shapes module

--- a/shrew/templates/home.html
+++ b/shrew/templates/home.html
@@ -4,10 +4,17 @@
   <div class="columns">
     <div class="column is-two-thirds">
       <div class="field">
-        <textarea class="textarea" id="editor-code">Square(color='lightgray')
-Circle(width=90, height=90, color='blue', x=-10, y=-10)
-Circle(width=90, height=90, color='yellow', x=20, y=20)
-t = Text("Hello World", y=75, x=10)</textarea>
+        <textarea class="textarea" id="editor-code">Square(color='pink')
+blue_circle = Circle(width=90, height=90, color='blue', x=-10, y=-10)
+yellow_circle = Circle(width=90, height=90, color='yellow', x=20, y=20)
+yellow_circle.transparency = 10
+hello = Text(text="Hello World", y=78, x=10)
+hello.rotation = -5
+
+# Text shadow
+hello_shadow = hello.copy(transparency=80)
+hello_shadow.x -= 1
+hello_shadow.y -= 1</textarea>
       </div>
       <div class="field">
         <button class="button is-primary" id="editor-run">
