--- a/shrew/templates/home.html
+++ b/shrew/templates/home.html
@@ -10,6 +10,7 @@ yellow_circle = Circle(width=90, height=90, color='yellow', x=20, y=20)
 yellow_circle.transparency = 10
 hello = Text(text="Hello World", y=78, x=10)
 hello.rotation = -5
+hello.color = ['red', 'blue']  # gradient
 
 # Text shadow
 hello_shadow = hello.copy(transparency=80)
