--- a/shrew/templates/creations/interpreter-sandbox.html
+++ b/shrew/templates/creations/interpreter-sandbox.html
@@ -15,6 +15,7 @@
 
     {% compress js %}
       <script type="skulpt-module" src="{% static 'skulpt-modules/shrew.py' %}"></script>
+      <script type="skulpt-module-es6" src="{% static 'skulpt-modules/awesome.js' %}"></script>
       <script type="module" src="{% static 'js/interpreter-sandbox.js' %}"></script>
     {% endcompress %}
   </body>
