--- a/shrew/static/sass/_editor.scss
+++ b/shrew/static/sass/_editor.scss
@@ -1,3 +1,6 @@
+@import "../../../node_modules/codemirror-minified/lib/codemirror";
+@import "cm_theme";
+
 // square iframe
 .sandbox-wrapper {
   position: relative;
@@ -20,6 +23,11 @@
 #editor-code {
   width: 100%;
   font-family: $family-monospace;
+  height: 23rem;
+}
+
+.CodeMirror {
+  border: 2px solid $light;
   height: 23rem;
 }
 
