--- a/shrew/static/sass/_editor.scss
+++ b/shrew/static/sass/_editor.scss
@@ -1,4 +1,5 @@
 @import "../../../node_modules/codemirror-minified/lib/codemirror";
+@import "../../../node_modules/codemirror-minified/addon/lint/lint";
 @import "cm_theme";
 
 // square iframe
