--- a/shrew/static/sass/_editor.scss
+++ b/shrew/static/sass/_editor.scss
@@ -1,5 +1,7 @@
 @import "../../../node_modules/codemirror-minified/lib/codemirror";
 @import "../../../node_modules/codemirror-minified/addon/lint/lint";
+@import "../../../node_modules/codemirror-minified/addon/hint/show-hint";
+
 @import "cm_theme";
 
 // square iframe
