Fix standalone static pages

--- a/shrew/templates/pages/page-detail.html
+++ b/shrew/templates/pages/page-detail.html
@@ -8,11 +8,17 @@
       <li><a href="/">Code Shrew</a></li>
       {% if page.category %}
         <li><a href="{% url 'pages:category-detail' slug=page.category.slug %}">{{ page.category }}</a></li>
+        <li class="is-active">
+          <a href="{% url 'pages:page-detail' slug=page.slug category_slug=page.category.slug %}"
+             aria-current="page">{{ page }}</a>
+        </li>
+      {% else %}
+        <li class="is-active">
+          <a href="{% url 'pages:page-detail' slug=page.slug %}"
+             aria-current="page">{{ page }}</a>
+        </li>
       {% endif %}
-      <li class="is-active">
-        <a href="{% url 'pages:page-detail' slug=page.slug category_slug=page.category.slug %}"
-           aria-current="page">{{ page }}</a>
-      </li>
+
     </ul>
   </nav>
 
