--- a/shrew/templates/base.html
+++ b/shrew/templates/base.html
@@ -53,7 +53,7 @@
         </div>
         <div class="navbar-end">
           <div class="navbar-item">
-            <a class="button is-primary is-medium" href="{% url 'todo' %}">
+            <a class="button is-primary is-medium" href="{% url 'editor' %}">
               <span class="icon">
                 <i class="fas fa-paint-brush"></i>
               </span>
