--- a/shrew/templates/creations/home.html
+++ b/shrew/templates/creations/home.html
@@ -13,14 +13,14 @@
       </p>
 
       <p>
-        The site will soon include much more features (including saving and sharing created drawings and animations).
+        The site will soon have much more features (including saving and sharing created drawings and animations).
         For now, we would like you to take a look at <a href="{% url 'editor' %}">the interactive editor</a> and a preliminary version of the <a href="{% url 'pages:category-detail' slug='lessons' %}">lessons</a>.
       </p>
 
       <p>
         Mostly we want you to have fun. Please, don't leave the site before creating at least couple of animations!
         You may want to read through <a href="{% url 'pages:category-detail' slug='documentation' %}">the documentation</a> first, to see what's possible.
-        You might also get inspired by some of the samples that we included below.
+        You might also get inspired by some of <a href="#samples">the samples</a> that we included below.
       </p>
 
       <p>
@@ -35,4 +35,15 @@
       </p>
     </div>
   </article>
+
+  <h1 class="title is-2" id="samples">Interactive Samples</h1>
+  {% if drawings %}
+    <h2 class="title is-3">Drawings</h2>
+    {% include 'creations/_samples.html' with samples=drawings %}
+  {% endif %}
+
+  {% if animations %}
+    <h2 class="title is-3">Animations</h2>
+    {% include 'creations/_samples.html' with samples=drawings %}
+  {% endif %}
 {% endblock %}
