Show sample animations on the homepage

--- a/shrew/templates/creations/home.html
+++ b/shrew/templates/creations/home.html
@@ -44,6 +44,6 @@
 
   {% if animations %}
     <h2 class="title is-3">Animations</h2>
-    {% include 'creations/_samples.html' with samples=drawings %}
+    {% include 'creations/_samples.html' with samples=animations %}
   {% endif %}
 {% endblock %}
