--- a/shrew/templates/creations/_samples.html
+++ b/shrew/templates/creations/_samples.html
@@ -1,6 +1,6 @@
-<div class="columns">
+<div class="columns is-multiline">
   {% for sample in samples %}
-    <div class="column is-multiline is-one-fifth">
+    <div class="column is-one-fifth">
       <div class="card">
         <div class="card-image">
           <figure class="image is-square">
