Smaller samples on mobile

--- a/shrew/templates/creations/_samples.html
+++ b/shrew/templates/creations/_samples.html
@@ -1,6 +1,6 @@
-<div class="columns is-multiline">
+<div class="columns is-mobile is-multiline">
   {% for sample in samples %}
-    <div class="column is-one-fifth">
+    <div class="column is-one-fifth-tablet is-half-mobile">
       <div class="card">
         <div class="card-image">
           <figure class="image is-square">
