--- a/shrew/templates/base.html
+++ b/shrew/templates/base.html
@@ -137,7 +137,7 @@
       <p>
         Code Shrew 2018<br>
         The site was created by <a href="https://ludwik.trammer.pl">Ludwik Trammer</a> and the lessons were designed by Jamie Nunez.<br>
-        See our <a href="{% url 'pages:page-detail' slug='terms' %}">Terms of Use</a> and <a href="{% url 'pages:page-detail' slug='privacy' %}">Privacy Policy</a>.
+        See our <a href="{% url 'pages:page-detail' slug='terms' %}">Terms of Use</a> and <a href="{% url 'pages:page-detail' slug='privacy' %}">Privacy Policy</a>. Also note that <a href="{% url 'pages:page-detail' slug='cookies' %}">we use cookies</a>.
       </p>
     </div>
   </footer>
