--- a/shrew/templates/socialaccount/snippets/provider_list.html
+++ b/shrew/templates/socialaccount/snippets/provider_list.html
@@ -5,7 +5,7 @@
 {% for provider in socialaccount_providers %}
   <div class="control">
     <a title="{{provider.name}}" class="is-medium button is-light button-social-login button-social-login-{{provider.id}}"
-        href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">
+        href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params method="js_sdk" %}">
       <span class="icon">
         <i class="fab fa-{{ provider.id }}"></i>
       </span>
