Set page titles for static pages

--- a/shrew/templates/404.html
+++ b/shrew/templates/404.html
@@ -1,6 +1,8 @@
 {%  extends 'base.html' %}
 {% load static %}
 
+{% block title %}Page Not Found - {{ block.super }}{%  endblock %}
+
 {% block content %}
   <section class="hero-mascot">
     <div class="hero-body">
