--- a/shrew/templates/base.html
+++ b/shrew/templates/base.html
@@ -19,7 +19,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/icons/apple-touch-icon.png' %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/icons/favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/icons/favicon-16x16.png' %}">
-    <title>Code Shrew</title>
+    <title>{% block title %}Code Shrew{%  endblock %}</title>
     {% compress css %}
       <link rel="stylesheet" type="text/x-scss" href="{% static 'sass/main.scss' %}">
     {% endcompress %}
