--- a/shrew/templates/pages/page-detail.html
+++ b/shrew/templates/pages/page-detail.html
@@ -2,6 +2,8 @@
 {% load markup %}
 {% load micawber_tags %}
 
+{% block title %}{{ page.name }} - {{ block.super }}{%  endblock %}
+
 {% block content %}
   <nav class="breadcrumb" aria-label="breadcrumbs">
     <ul>
