--- a/shrew/templates/creations/editor.html
+++ b/shrew/templates/creations/editor.html
@@ -1,16 +1,35 @@
 {%  extends 'base.html' %}
 
 {% block content %}
-  <div class="columns">
-    <div class="column is-two-thirds">
-      <div class="field">
-        <textarea class="textarea" id="editor-code">{{ code }}</textarea>
+  <div id="shrew-editor" class="no-output {% if not owner %}unsaved{% endif %}">
+    <div class="columns">
+      <div class="column is-one-fifth-desktop is-3">
+        <button id="saveButton" class="button is-fullwidth">
+          <span class="caption">{% if owner %}Saved{% else %}Save to my profile{% endif %}</span>
+          &nbsp;
+          <span class="time"></span>
+        </button>
+      </div>
+      <div id="name" class="column title">
+        {% if creation is not None %}
+          {{ creation.name }}
+        {% else %}
+          Unnamed <span class="kind">drawing</span>
+        {% endif %}
       </div>
     </div>
-    <div class="column">
-      <div class="sandbox-wrapper">
-        <iframe id="interpreter-sandbox" scrolling="no" src="{% url 'creations:interpreter-sandbox' %}"
-            sandbox="allow-scripts"></iframe>
+    <div class="columns">
+      <div class="column is-two-thirds">
+        <div class="field">
+          <textarea class="textarea" id="editor-code"
+                    data-slug="{{ creation.slug }}" data-name="{{ creation.name }}">{{ code }}</textarea>
+        </div>
+      </div>
+      <div class="column">
+        <div class="sandbox-wrapper">
+          <iframe id="interpreter-sandbox" scrolling="no" src="{% url 'creations:interpreter-sandbox' %}"
+              sandbox="allow-scripts"></iframe>
+        </div>
       </div>
     </div>
   </div>
