--- a/shrew/templates/creations/editor.html
+++ b/shrew/templates/creations/editor.html
@@ -1,10 +1,30 @@
 {%  extends 'base.html' %}
 
 {% block content %}
-  <div id="shrew-editor" class="no-output {% if not owner %}unsaved{% endif %}">
+  <div class="modal" id="login-modal">
+    <div class="modal-background"></div>
+    <div class="modal-card">
+      <header class="modal-card-head">
+        <p class="modal-card-title">Do you want to log in?</p>
+        <button class="delete" aria-label="close"></button>
+      </header>
+      <section class="modal-card-body">
+        <p>To save your creation, you need to be logged in. You can log in or quickly create a new account now.
+        The login/signup form will open in a new window.</p>
+        <p>Do you want to do this now?</p>
+      </section>
+      <footer class="modal-card-foot">
+        <button class="button is-success">Yes, log in or create account</button>
+        <button class="button cancel">Cancel</button>
+      </footer>
+    </div>
+  </div>
+
+  <div id="shrew-editor"
+       class="no-output {% if not owner %}unsaved{% endif %} {% if not request.user.is_authenticated %}unauthenticated{% endif %}">
     <div class="columns">
       <div class="column is-one-fifth-desktop is-3">
-        <button id="saveButton" class="button is-fullwidth">
+        <button id="save-button" class="button is-fullwidth">
           <span class="caption">{% if owner %}Saved{% else %}Save to my profile{% endif %}</span>
           &nbsp;
           <span class="time"></span>
