--- a/shrew/static/sass/main.scss
+++ b/shrew/static/sass/main.scss
@@ -12,5 +12,5 @@ $navbar-height: 7rem;
 @import "hero-mascot";
 @import "editor";
 @import "embed";
-@import "home";
 @import "account";
+@import "creations_list";
